--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "devias-material-kit-pro",
-  "author": "DeviasIO",
-  "email": "contact@devias.io",
-  "licence": "LICENSED",
-  "version": "1.3.0",
+  "name": "duyvpn-react-boilerplate",
+  "author": "duyvpn",
+  "email": "duyvpn@fpt.com.vn",
+  "licence": "",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "env-cmd -f .env react-scripts start",
+    "dev": "env-cmd -f .env react-scripts start",
     "build": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -70,6 +70,7 @@
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "react-toastify": "^7.0.3",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
