--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,9 @@ services:
       dockerfile: Dockerfile
       context: ./
       target: dev
+    stdin_open: true
+    environment:
+      APP_PORT: 9090
     env_file:
       - .env
     volumes:
