--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
-  "printWidth": 80,
   "singleQuote": true,
-  "trailingComma": "none",
+  "trailingComma": "es5",
   "tabWidth": 2,
   "useTabs": false,
-  "react/jsx-max-props-per-line": [1, { "when": "always" }]
+  "react/jsx-max-props-per-line": [1, { "when": "always" }],
+  "quoteProps": "consistent"
 }
