:wrench: update config docker-compose, :memo: add docker hub

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 REACT_APP_BASE_URL=
-APP_PORT=3000
+PORT=8000
 APP_VER=1.0.0
+APP_NAME=react-boilerplate
+MONGODB=mogo://url:27017?sadasd
+DOCKER_HUB_USERNAME=phiduy1105
