:memo: update docker file with multi-services

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 REACT_APP_BASE_URL=
+SECRET_TOKEN=
+SECRET_REFRESHTOKEN=
+TOKEN_LIFE=
+REFRESHTOKEN_LIFE=
 PORT=8000
 APP_VER=1.0.0
 APP_NAME=react-boilerplate
