--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,13 +6,15 @@ services:
   #     - "${MONGO_PORT}:${MONGO_PORT}"
   #   env_file:
   #     - .env
-  # redis:
-  #   image: "redis:rc-alpine3.12"
-  #   command: redis-server --requirepass ${REDIS_PWD}
-  #   ports:
-  #     - "${REDIS_PORT}:${REDIS_PORT}"
-  #   env_file:
-  #     - .env
+  swagger-ui:
+    image: swaggerapi/swagger-ui
+    container_name: swagger-ui
+    ports:
+      - "8001:8080"
+    volumes:
+      - ./swagger:/usr/share/nginx/html/swagger
+    environment:
+      API_URL: swagger/api.yaml
   server:
     ports:
       - ${PORT}:${PORT}
@@ -30,6 +32,5 @@ services:
     volumes:
       - .:/app
       - /app/node_modules/ #fix node-sass not working
-    # depends_on:
-    #   - mongo
-    #   - redis
+    depends_on:
+      - swagger-ui
